# collab-core

./: CLAUDE.md  CMakeLists.txt  CODEGEN.md  MODELS_TODO.md  MODULE_DUAL_MODE.md  README.md  TYPE_DEF_DOCS.md  VALIDATION_SPIKE.md  validation.md  xmake.lua
.github/workflows/: main_branch.yml
cmake/: collab-core-config.cmake.in
docs/: IMPORT_WITH_INCLUDE_IMPORTANT_NOTES.md  INTRO_TO_DUAL_MODE_FOR_AGENTS.md  TODO.md  design-dynamic-type-def.md  field-dsl-msvc-notes.md  handoff-model-system.md  logging.md  test-migration-checklist.md  test-reorganization-plan.md
include/: collab.hpp
include/collab/: atomic_file_writer.hpp  core.hpp  fixed_string.hpp  semver.hpp  term.hpp  version.hpp
include/collab/core/: version.hpp
include/collab/detail/: atomic_file_writer.decls.hpp  atomic_file_writer.posix.hpp  atomic_file_writer.windows.hpp  log_inline.hpp  state.hpp  types.hpp
lib/collab/: xmake.lua
lib/collab.core/: xmake.lua
lib/collab.core/src/: collab.core.cppm  emitter.cppm  error.cppm  field.cppm  field_json.cpp  field_json.cppm  field_pfr.cppm  field_reflect.cppm  field_registry.cppm  fixed_string.cppm  log.cpp  log.cppm  options.cppm  semver.cpp  semver.cppm  signal.cppm  term.cpp  term.cppm  type_def.cppm
lib/collab.core/tests/: test_create.cpp  test_dynamic_type_def.cpp  test_emitter.cpp  test_error.cpp  (+31 more)
scripts/: generate.py
src/: collab.cppm  collab_toggle.hpp  core.cpp  error.cppm  error_impl.cpp  fixed_string_impl.cpp  identifier.cppm  identifier_impl.cpp  log.cppm  log_impl.cpp  log_native.cpp  manifest.cppm  manifest_impl.cpp  publisher.cppm  publisher_impl.cpp  semver.cppm  semver_impl.cpp  term.cppm  term_impl.cpp  term_native.cpp  version.cpp
tests/: test_dual.cpp  test_import_only.cpp  test_include_only.cpp  xmake.lua
tests/common/: test_atomic_file_writer.inc  test_error.inc  test_fixed_string.inc  test_identifier.inc  test_log.inc  test_manifest.inc  test_publisher.inc  test_semver.inc  test_term.inc
tests/extended/: test_log_sinks.inc  test_term_ostream.inc
(+4 files in other folders)
